removed vh height for mobile due to issues with overlapping ui. adjust navbar for simplicity and less code for mobile

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -12,6 +12,7 @@
   font-weight: 600;
   font-style: normal;
   font-size: 16px;
+  color: #e9f2ff;
 }
 
 .header {
