--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,10 +1,9 @@
-.nav-item {
+.nav-link {
     font-size: 12px;
-    margin-top: 4px;
 }
 
 @media (min-width: 768px) {
-    .nav-item {
+    .nav-link {
       font-size: 14px;
     }
   }
